--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+#spring.datasource.url=jdbc:postgresql://localhost:5432/employee
+#spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
